--- a/package.json
+++ b/package.json
@@ -9,5 +9,16 @@
     "curve"
   ],
   "author": "Cole Willsea <coleww@gmail.com> (http://colewillsea.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coleww/make-distortion-curve.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coleww/make-distortion-curve/issues"
+  },
+  "homepage": "https://github.com/coleww/make-distortion-curve"
 }
